# RawFileReaderS

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FINDING.md  LICENSE.md  README.md
.github/workflows/: release.yml
crates/cfb-reader/: Cargo.toml
crates/cfb-reader/src/: lib.rs
crates/thermo-raw/: Cargo.toml
crates/thermo-raw-cli/: Cargo.toml
crates/thermo-raw-cli/src/: main.rs
crates/thermo-raw-gui/: Cargo.toml
crates/thermo-raw-gui/src/: app.rs  conversion.rs  file_list.rs  main.rs
crates/thermo-raw-mzml/: Cargo.toml
crates/thermo-raw-mzml/src/: binary.rs  cv.rs  lib.rs  writer.rs
crates/thermo-raw-py/: Cargo.toml  pyproject.toml
crates/thermo-raw-py/src/: lib.rs
crates/thermo-raw/src/: batch.rs  chromatogram.rs  error.rs  file_header.rs  io_utils.rs  lib.rs  metadata.rs  progress.rs  raw_file.rs  raw_file_info.rs  run_header.rs  scan_data.rs  scan_data_centroid.rs  scan_data_ftlt.rs  scan_data_profile.rs  scan_event.rs  scan_filter.rs  scan_index.rs  trailer.rs  types.rs  validation.rs  version.rs
crates/thermo-raw/tests/: ground_truth_tests.rs  synthetic_tests.rs
docs/: FORMAT_SPEC.md  OLE2_STRUCTURE.md  RE_PLAN.md  ReleaseNotes.md  SCAN_DATA_ENCODING.md  TransitionMatrix.md  UsingNuGet.md  UsingRawFileReader.md  VALIDATION_REPORT.md  VERSION_DIFFERENCES.md  python-api.md  rust-api.md
tools/decompiler/: decompile.sh
tools/decompiler/decompiled/v8.0.6/ThermoFisher.CommonCore.BackgroundSubtraction/: ThermoFisher.CommonCore.BackgroundSubtraction.csproj
tools/decompiler/decompiled/v8.0.6/ThermoFisher.CommonCore.BackgroundSubtraction/Properties/: AssemblyInfo.cs
tools/decompiler/decompiled/v8.0.6/ThermoFisher.CommonCore.BackgroundSubtraction/ThermoFisher.CommonCore.BackgroundSubtraction/: BackgroundSubtractionSettings.cs  BackgroundSubtractor.cs  CentroidStreamPoint.cs  ChargeResult.cs  NamespaceDoc.cs  NoisePackets.cs  PattersonChargeCalculator.cs  PeakChargeCalculator.cs  ScanAverager.cs  ScanAveragerPlus.cs  ScanFromFileCreator.cs  ScanFromListCreator.cs  ScanFromThreadedFileCreator.cs  SpectrumAverager.cs
tools/decompiler/decompiled/v8.0.6/ThermoFisher.CommonCore.Data/: ThermoFisher.CommonCore.Data.Enumerations.resx  ThermoFisher.CommonCore.Data.csproj
tools/decompiler/decompiled/v8.0.6/ThermoFisher.CommonCore.Data/Properties/: AssemblyInfo.cs
tools/decompiler/decompiled/v8.0.6/ThermoFisher.CommonCore.Data/ThermoFisher.CommonCore.Data.Business/: AnalogInstrument.cs  AnalogScanIndex.cs  Analytics.cs  AutoFilterPlus.cs  AutoSamplerInformation.cs  AvalonSettings.cs  BandedData.cs  BarcodeStatusType.cs  BracketType.cs  CachedScanProvider.cs  CalibrationCurveData.cs  CalibrationCurvePoint.cs  CalibrationLevel.cs  CentroidStream.cs  ChannelHeader2D.cs  ChannelHeader3D.cs  ChannelHeaderBase.cs  ChannelProperty.cs  ChromatogramAggregator.cs  ChromatogramBatchGenerator.cs  ChromatogramBoundsFinder.cs  ChromatogramFragmentCreator.cs  ChromatogramFragmentRequest.cs  ChromatogramGeneratorFactory.cs  ChromatogramPointBuilderFactory.cs  ChromatogramPointRequest.cs  ChromatogramSignal.cs  ChromatogramTraceSettings.cs  CommonData.cs  DataFilter.cs  DataUnits.cs  DefaultScanProvider.cs  Device.cs  DeviceMethodFactory.cs  ElementSubset.cs  ElementalCompositionParameters.cs  ElementalCompositionResult.cs  ElementsSubsetCollection.cs  EventCode.cs  EventCollection.cs  (+136 more)
tools/decompiler/decompiled/v8.0.6/ThermoFisher.CommonCore.Data/ThermoFisher.CommonCore.Data.FilterEnums/: ActivationType.cs  CompensationVoltageType.cs  DetectorType.cs  EnergyType.cs  EventAccurateMass.cs  FieldFreeRegionType.cs  IonizationModeType.cs  MSOrderType.cs  MassAnalyzerType.cs  NamespaceDoc.cs  PolarityType.cs  ScanDataType.cs  ScanModeType.cs  SectorScanType.cs  SourceFragmentationValueType.cs  TriState.cs
tools/decompiler/decompiled/v8.0.6/ThermoFisher.CommonCore.Data/ThermoFisher.CommonCore.Data.Interfaces/: CalStandards.cs  CalibrateAs.cs  ChroAnalysisReport.cs  ChromatogramPointMode.cs  ChromatographyType.cs  ComponentType.cs  ElementConditions.cs  ElementsInCompound.cs  ExtendToleranceBy.cs  FileType.cs  FilterAccurateMass.cs  FilterPrecisionMode.cs  FilterRule.cs  FtAverageOptions.cs  IAdvancedPacketData.cs  IAnalogDeviceBinaryWriter.cs  IAnalogDeviceWriter.cs  IAnalogScanIndex.cs  IAutoSamplerInformation.cs  IBaseDeviceWriter.cs  IBaseScanIndex.cs  IBinaryBaseDataWriter.cs  IBinaryMsInstrumentData.cs  (+166 more)
tools/decompiler/decompiled/v8.0.6/ThermoFisher.CommonCore.MassPrecisionEstimator/: ThermoFisher.CommonCore.MassPrecisionEstimator.csproj
tools/decompiler/decompiled/v8.0.6/ThermoFisher.CommonCore.RawFileReader/: ThermoFisher.CommonCore.RawFileReader.Resources.resx  ThermoFisher.CommonCore.RawFileReader.csproj
tools/ground-truth/: export_ground_truth.py
tools/ground-truth-exporter/: GroundTruthExporter.csproj  Program.cs
tools/ground-truth/output/centroids/: scan_1.json  scan_113459.json  scan_113530.json  scan_170191.json  scan_226918.json  scan_5.json  scan_56730.json
tools/hex-analyzer/: Cargo.toml
tools/hex-analyzer/src/: main.rs
(+533 files in other folders)
