[workspace]
resolver = "2"
members = [
    "crates/cfb-reader",
    "crates/thermo-raw",
    "crates/thermo-raw-cli",
    "crates/thermo-raw-mzml",
    "tools/hex-analyzer",
]
exclude = [
    "crates/thermo-raw-py",
]

[workspace.lints.clippy]
redundant_clone = "warn"
large_enum_variant = "warn"
needless_collect = "warn"
perf = { level = "warn", priority = -1 }

[workspace.dependencies]
memmap2 = "0.9"
rayon = "1.10"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
byteorder = "1"
anyhow = "1"
