[package]
name = "thermo-raw-cli"
version = "0.4.4"
edition = "2021"
description = "Thermo RAW file reader CLI"

[lints]
workspace = true

[dependencies]
thermo-raw = { path = "../thermo-raw" }
thermo-raw-mzml = { path = "../thermo-raw-mzml" }
cfb-reader = { path = "../cfb-reader" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
indicatif = "0.17"
