[package]
name = "thermo-raw-py"
version = "0.2.0"
edition = "2021"
description = "Python bindings for thermo-raw via PyO3"

[lib]
name = "RawFileReaderS"
crate-type = ["cdylib"]

[dependencies]
thermo-raw = { path = "../thermo-raw" }
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
