[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "RawFileReaderS"
version = "0.1.0"
description = "Pure Rust Thermo RAW file reader with Python bindings"
requires-python = ">=3.9"
dependencies = ["numpy>=1.20"]

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/generate-import-lib"]
