[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "RawFileReaderS"
dynamic = ["version"]
description = "Pure Rust Thermo RAW file reader with Python bindings"
requires-python = ">=3.11"
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
progress = ["tqdm>=4.0"]

[tool.maturin]
features = ["pyo3/abi3-py311", "pyo3/generate-import-lib"]
