[package]
name = "thermo-raw"
version = "0.4.4"
edition = "2021"
description = "Pure Rust Thermo RAW file reader"

[lints]
workspace = true

[dependencies]
cfb-reader = { path = "../cfb-reader" }
memmap2 = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
byteorder = { workspace = true }
